# devops-study-app

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend-tests.yaml  docker-build-push.yaml  e2e-tests.yaml  frontend-tests.yaml  release-please.yaml  update-gitops.yaml
kubernetes/: k3d-minimal.yaml  pyproject.toml  setup_cluster_gitops  setup_cluster_local  setup_cluster_minimal
kubernetes/manifests/base/backend/: deployment.yaml
kubernetes/manifests/base/frontend/: deployment.yaml
kubernetes/manifests/dev/: kustomization.yaml
scripts/: setup_deploy_keys  setup_project  update_kustomize_tag
src/backend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/backend/src/data/: sessions.csv
src/frontend/: CHANGELOG.md  Dockerfile  pyproject.toml
src/frontend/src/frontend/: main.py
