[project]
name = "study-tracker-backend"
version = "0.0.0"
description = "ckend API for tracking study time for DevOps certifications"
readme = "README.md"
authors = [
    { name = "Maor Klir", email = "maor.klir@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "ruff>=0.12.2",
    "uvicorn>=0.35.0",
]

[project.scripts]
study-tracker-api = "backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
